--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="second_left"><h2>Mosaddeq Hossain </h2></div>
             <div class="second_right">
                 <ul>
+                    <li><a href="#About_Me">About Me</a></li>
                     <li ><a href="#">Educationl <br> qualification</a></li>
                     <li ><a href="#">Job <br> Experience</a></li>
                     <li ><a href="#">Research <br> Experience</a></li>
@@ -37,7 +38,7 @@
         </div>
         <div class="main_third">
                            <div class="main_main_third">
-                            <div class="third_left"><img src="images/profile_picture.jpg" alt=""></div>
+                            <div class="third_left"><img src="images/Babu mama1.jpg" alt=""></div>
                             <div class="third_right">
                                 <h6>Mosaddeq Hossain</h6>
                                 <p>Adjunct Faculty. <br>Manarat Internaional University.</p>
@@ -63,17 +64,25 @@
         </div> 
         <div class="main_fourth">
             </div>
-        <div class="main_fifth">
+        <div id="About_Me">
             <h2 >Hello! I am Mosaddeq.</h2>
-            <p>I have completed Bachelor of Science and Masters of Science
-                 in Mathematics from Jahangirnagar University, which is a reputed 
+            <p>I am a Mathematics graduate from Jahangirnagar University, which is a reputed 
                  public university in Bangladesh.I have been working as an
-                  adjunct faculty at Manarat Universuty from 
-                  January,2021.I am passionate for pursuing higher study in applied Mathematics
-                or interdisciplinary field of mathematics, statistics, health informatics,
-                andcomputer science.</p>
+                  adjunct faculty in Department of Computer Science and Engineering at Manarat International University, Dhaka, Bangladesh.
+                  Welcome to my </p>
+                  
         </div>
 
 
 </body>
+
+<head>
+    <title>Visitor Counter</title>
+</head>
+<body>
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7943070&style=0038&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>    
+</body>
+
 </html>
