--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
     <div class="all_experience">
-        <div id="job_experience">
+        <div id="Teaching">
            
             <i class="fa-solid fa-briefcase"></i><h3>Job Experience</h3>
             <p>
